--- a/ui_calculator/davidhatten/uicalculator/src/main/resources/templates/index.html
+++ b/ui_calculator/davidhatten/uicalculator/src/main/resources/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hope this works!</title>
 </head>
 <body>
     <p><h1>Spring Boot And Thymeleaf!</h1></p>
+    <h2><p th:text="'Hello ' + ${name} + '!'"></p></h2>
 </body>
 </html>
