--- a/ui_calculator/davidhatten/uicalculator/src/main/resources/templates/index.html
+++ b/ui_calculator/davidhatten/uicalculator/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <p><h1>Spring Boot And Thymeleaf!</h1></p>
-    <h2><p th:text="'Hello ' + ${name} + '!'"></p></h2>
+    <h2><p th:text="${nameText}"></p></h2>
 </body>
 </html>
